auth-svc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: auth-svc
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
